--- a/index.html
+++ b/index.html
@@ -170,95 +170,113 @@
   </div>
   
     <div class="features-wrap-bg">
-    <div class="features-wrapper">
-      <div class="features">
-        <div class="features-card">
-          <img class="icon icon_1" src="./images/features/icons/icon_1.png" alt="" />
-          <div class="features-card--content">
-            <p class="content-title">Creatred to Make The Web Better</p>
-            <p class="content-info">
-              Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
-              laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget
-              ut augue.
-            </p>
-          </div>
+  <div class="features-wrapper">
+    <div class="info__img-wrapper">
+      <div class="features-info__img--none"></div>
+    </div>
+    <div class="features">
+      <div class="features-card">
+        <img
+          class="icon icon_1"
+          src="../images/features/icons/icon_1.png"
+          alt="feature-icon"
+        />
+        <div class="features-card--content">
+          <p class="content-title">Creatred to Make The Web Better</p>
+          <p class="content-info">
+            Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+            laoreet vulputate dignissim. Sed id metus id quam auctor molestie
+            eget ut augue.
+          </p>
         </div>
-        <div class="features-card">
-          <img class="icon icon_2" src="./images/features/icons/icon_2.png" alt="" />
-          <div class="features-card--content">
-            <p class="content-title">Incredibly Powerful Tool</p>
-            <p class="content-info">
-              Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio,
-              ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida
-              luctus. Aliquam erat volutpat.
-            </p>
-          </div>
-        </div>
-        <div class="features-card">
-          <img class="icon icon_3" src="./images/features/icons/icon_3.png" alt="" />
-          <div class="features-card--content">
-            <p class="content-title">Experimental Stuff</p>
-            <p class="content-info">
-              Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio,
-              ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida
-              luctus. Aliquam erat volutpat.
-            </p>
-          </div>
-        </div>
-        <div class="features-card">
-          <img class="icon icon_4" src="./images/features/icons/icon_4.png" alt="" />
-          <div class="features-card--content">
-            <p class="content-title">Creatred to Make The Web Better</p>
-            <p class="content-info">
-              Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio,
-              ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida
-              luctus. Aliquam erat volutpat.
-            </p>
-          </div>
-        </div>
-        <div class="features-info__img--none"></div>
       </div>
-      <div class="features-info">
-        <div class="features-info__title">
-          <p>&lt Here is what you get &gt</p>
+      <div class="features-card">
+        <img
+          class="icon icon_2"
+          src="../images/features/icons/icon_2.png"
+          alt="feature-icon"
+        />
+        <div class="features-card--content">
+          <p class="content-title">Incredibly Powerful Tool</p>
+          <p class="content-info">
+            Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis
+            odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi
+            gravida luctus. Aliquam erat volutpat.
+          </p>
         </div>
-        <div class="features-info__title--none">
-          <p>&lt Here is what</p>
-          <p>you get &gt</p>
+      </div>
+      <div class="features-card">
+        <img
+          class="icon icon_3"
+          src="../images/features/icons/icon_3.png"
+          alt="feature-icon"
+        />
+        <div class="features-card--content">
+          <p class="content-title">Experimental Stuff</p>
+          <p class="content-info">
+            Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis
+            odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi
+            gravida luctus. Aliquam erat volutpat.
+          </p>
         </div>
-        <div class="features-info__img">
-          <img src="./images/features/images/img_1.png" alt="" />
+      </div>
+      <div class="features-card">
+        <img
+          class="icon icon_4"
+          src="../images/features/icons/icon_4.png"
+          alt="feature-icon"
+        />
+        <div class="features-card--content">
+          <p class="content-title">Creatred to Make The Web Better</p>
+          <p class="content-info">
+            Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis
+            odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi
+            gravida luctus. Aliquam erat volutpat.
+          </p>
         </div>
       </div>
     </div>
+    <div class="features-info">
+      <div class="features-info__title">
+        <p>&lt Here is what you get &gt</p>
+      </div>
+      <div class="features-info__title--none">
+        <p>&lt Here is what</p>
+        <p>you get &gt</p>
+      </div>
+      <div class="features-info__img">
+        <img src="../images/features/images/img_1.png" alt="code-image" />
+      </div>
+    </div>
   </div>
-  
+</div>
+
     <div class="testimonials">
     <div class="container">
         <div class="title_section">People Are Talking About Fork</div>
         <div class="testimonials-grid">
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="./images/testimonials1.svg" />
+                <img class="testimonials-item-icon" src="../images/testimonials1.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis.</div>
             </div>
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="./images/testimonials2.svg" />
+                <img class="testimonials-item-icon" src="../images/testimonials2.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend nibh.</div>
             </div>
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="./images/testimonials3.svg" />
+                <img class="testimonials-item-icon" src="../images/testimonials3.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula.</div>
             </div>
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="./images/testimonials4.svg" />
+                <img class="testimonials-item-icon" src="../images/testimonials4.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis.</div>
             </div>
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="./images/testimonials5.svg" />
+                <img class="testimonials-item-icon" src="../images/testimonials5.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat faucibus.</div>
             </div>
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="./images/testimonials6.svg" />
+                <img class="testimonials-item-icon" src="../images/testimonials6.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.</div>
             </div>
         </div>
@@ -283,3 +301,4 @@
     <script src="./js/scripts.min.js" type="module"></script>
 </body>
 </html>
+
