--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="features-card">
         <img
           class="icon icon_1"
-          src="../images/features/icons/icon_1.png"
+          src="./images/features/icons/icon_1.png"
           alt="feature-icon"
         />
         <div class="features-card--content">
@@ -193,7 +193,7 @@
       <div class="features-card">
         <img
           class="icon icon_2"
-          src="../images/features/icons/icon_2.png"
+          src="./images/features/icons/icon_2.png"
           alt="feature-icon"
         />
         <div class="features-card--content">
@@ -208,7 +208,7 @@
       <div class="features-card">
         <img
           class="icon icon_3"
-          src="../images/features/icons/icon_3.png"
+          src="./images/features/icons/icon_3.png"
           alt="feature-icon"
         />
         <div class="features-card--content">
@@ -223,7 +223,7 @@
       <div class="features-card">
         <img
           class="icon icon_4"
-          src="../images/features/icons/icon_4.png"
+          src="./images/features/icons/icon_4.png"
           alt="feature-icon"
         />
         <div class="features-card--content">
@@ -245,7 +245,7 @@
         <p>you get &gt</p>
       </div>
       <div class="features-info__img">
-        <img src="../images/features/images/img_1.png" alt="code-image" />
+        <img src="./images/features/images/img_1.png" alt="code-image" />
       </div>
     </div>
   </div>
@@ -256,27 +256,27 @@
         <div class="title_section">People Are Talking About Fork</div>
         <div class="testimonials-grid">
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="../images/testimonials1.svg" alt="company-icon" />
+                <img class="testimonials-item-icon" src="./images/testimonials1.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis.</div>
             </div>
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="../images/testimonials2.svg" alt="company-icon" />
+                <img class="testimonials-item-icon" src="./images/testimonials2.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend nibh.</div>
             </div>
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="../images/testimonials3.svg" alt="company-icon" />
+                <img class="testimonials-item-icon" src="./images/testimonials3.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula.</div>
             </div>
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="../images/testimonials4.svg" alt="company-icon" />
+                <img class="testimonials-item-icon" src="./images/testimonials4.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis.</div>
             </div>
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="../images/testimonials5.svg" alt="company-icon" />
+                <img class="testimonials-item-icon" src="./images/testimonials5.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat faucibus.</div>
             </div>
             <div class="testimonials-item">
-                <img class="testimonials-item-icon" src="../images/testimonials6.svg" alt="company-icon" />
+                <img class="testimonials-item-icon" src="./images/testimonials6.svg" alt="company-icon" />
                 <div class="testimonials-item-descr">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.</div>
             </div>
         </div>
